--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="React Contact Form"
-    />
+    <meta property="og:title" content="React Contact Form" />
+    <meta property="og:description" content="Made with ♥️ by Michael Huber" />
+    <meta property="og:image" content="%PUBLIC_URL%/form.png" />
+    <meta property="og:url" content="https://mshuber1981.github.io/react-contact-form" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="github.com/mshuber1981" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
