--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="React Contact Form" />
-    <meta property="og:description" content="Made with ♥️ by Michael Huber" />
+    <meta property="og:title" content="Contact Me" />
+    <meta
+      property="og:description"
+      content="Built with React, and powered by AWS."
+    />
     <meta property="og:image" content="%PUBLIC_URL%/form.png" />
-    <meta property="og:url" content="https://mshuber1981.github.io/react-contact-form" />
+    <meta
+      property="og:url"
+      content="https://mshuber1981.github.io/react-contact-form"
+    />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:site_name" content="github.com/mshuber1981" />
+    <meta property="og:site_name" content="GitHub.com/mshuber1981" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Contact Form</title>
+    <title>Contact Me</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
