--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       property="og:description"
       content="Built with React, and powered by AWS."
     />
-    <meta property="og:image" content="/form.png" />
+    <meta
+      property="og:image"
+      content="https://mshuber1981.github.io/react-contact-form/form.png"
+    />
     <meta
       property="og:url"
       content="https://mshuber1981.github.io/react-contact-form"
@@ -29,7 +32,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/react-contact-form/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
